add img url and descriptions to config